# project3

./: README.md  pyproject.toml
src/blackbody_mcmc/: cli.py  diagnostics.py  model.py
